----

* Move `InterruptContext` into a package level function and not a method of GetOpt.
+
[source,diff]
----
- ctx, cancel, done := opt.InterruptContext()
+ ctx, cancel, done := getoptions.InterruptContext()
----

* `Write` io.Writer used to write warnings and errors (which defaults to os.Stderr) has been made into a package level variable and not a method of GetOpt.

=== New Features

Autocompletion is super useful now.

== v0.24.0: New Features

As the releases before, this release has 100% test coverage.
Tested with Go 1.14, 1.15, 1.16 and Go 1.17.

=== New Features

* Add `SetMaxParallel` method to DAG graph to limit concurrency.

* Add `SetOutputBuffer` method to DAG graph to allow buffering task output in memory and printing it at the end of the task execution for easier debugging.

* Enable completion results after options that require arguments.

=== Fixes

* Fix spelling mistake in package `dag`: `DephFirstSort()` -> `DepthFirstSort()`

== v0.23.0: Feature Updates

As the releases before, this release has 100% test coverage.
Tested with Go 1.14 and Go 1.15.

=== Feature Updates

* Introduce `Float64Optional` and `Float64VarOptional` to have complete method parity for String, Int and Float64 types.

* Support multi-line command descriptions.

* Add `GetEnv` support for missing single option types:
	- Int, IntVar, IntOptional, IntVarOptional
  - StringOptional, StringVarOptional
  - Float64, Float64Var, Float64Optional, Float64VarOptional

== v0.22.0: Breaking Change

As the releases before, this release has 100% test coverage.
Tested with Go 1.14 and Go 1.15.

=== Bug fix

Fix completion issues where a completion that works when starting to complete from scratch fails when some args are deleted.

Fixed by changing the exit status when generating completions from 1 to 124.